Added db connection

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,9 @@
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=akankshadivya26@gmail.com
-SMTP_PASS=irampicxjamkgxit
+SMTP_PASS=
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=RFP
+PORT=5000
