--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "imap-simple": "^5.1.0",
+    "mailparser": "^3.9.0",
     "nodemailer": "^7.0.11",
     "pdfkit": "^0.17.2"
   }
