--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,11 @@ SMTP_USER=akankshadivya26@gmail.com
 SMTP_PASS=
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=Akanksha26@
 DB_NAME=RFP
 PORT=5000
+IMAP_HOST=imap.gmail.com
+IMAP_PORT=993
+IMAP_USER=akankshadivya26@gmail.com
+IMAP_PASS=
+IMAP_TLS=true
