--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@ SMTP_PORT=587
 SMTP_USER=akankshadivya26@gmail.com
 SMTP_PASS=
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=Akanksha26@
+DB_USER=
+DB_PASSWORD=
 DB_NAME=RFP
 PORT=5000
 IMAP_HOST=imap.gmail.com
